// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi Binary from ESNext: first 1`] = `
"#!/usr/bin/env node

/*! esnext-multibinary v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

var _snakeCase = require('lodash/snakeCase');

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e['default'] : e; }

var _snakeCase__default = /*#__PURE__*/_interopDefaultLegacy(_snakeCase);

const realWords = \\"Eine dicke Kuh lacht\\";

console.log(\\"Magic:\\", _snakeCase__default(realWords));
//# sourceMappingURL=first-cli.js.map
"
`;

exports[`Multi Binary from ESNext: second 1`] = `
"#!/usr/bin/env node

/*! esnext-multibinary v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

var _camelCase = require('lodash/camelCase');

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e['default'] : e; }

var _camelCase__default = /*#__PURE__*/_interopDefaultLegacy(_camelCase);

const realWords = \\"Eine dicke Kuh lacht\\";

console.log(\\"Magic:\\", _camelCase__default(realWords));
//# sourceMappingURL=second-cli.js.map
"
`;
